# opticalexperiment

./: .clang-format  .clang-tidy  .clang-tidy-excludes  .gitignore  .travis.yml  CMakeLists.txt  OpticalExperiment.pro  README.md  command.cpp  command.h  commandhandler.cpp  commandhandler.h  commandhanlerglobal.cpp  commandhanlerglobal.h  devicemanager.cpp  devicemanager.h  devices.json  generate_clang_list.py  globaldefines.h  instrumentconfig.cpp  instrumentconfig.h  main.cpp  matrix.h  properties.cpp  properties.h  propertyobserver.cpp  propertyobserver.h  recource.qrc  singleton.hpp
command/: command.cpp  command.h  commandhandler.cpp  commandhandler.h  commandhanlerglobal.cpp  commandhanlerglobal.h
deviceconfigs/: commandhadlermodel.cpp  commandhadlermodel.h  device.cpp  device.h  deviceconfig.cpp  deviceconfig.h  deviceconfiglist.cpp  deviceconfiglist.h  devicedefines.h  devicelist.cpp  devicelist.h  deviceviewconfig.cpp  deviceviewconfig.h  deviceviewlist.cpp  deviceviewlist.h  diffractiongrating.cpp  diffractiongrating.h  display.cpp  display.h  laser.cpp  laser.h  ordinalfunction.cpp  ordinalfunction.h  wave.cpp  wave.h
ui/: basechartitem.cpp  basechartitem.h  bloweritem.cpp  bloweritem.h  chartitem.cpp  chartitem.h  chartview.cpp  chartview.h  chartwidget.cpp  chartwidget.h  commandhandlerchart.cpp  commandhandlerchart.h  commandhandlerview.cpp  commandhandlerview.h  commandviewmanager.cpp  commandviewmanager.h  connectionitem.cpp  connectionitem.h  constructareawidget.cpp  constructareawidget.h  constructoritem.cpp  constructoritem.h  genericitem.cpp  (+32 more)
(+12 files in other folders)
